[tool.poetry]
name = "superbowldatagen"
version = "0.1.0"
description = ""
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
DateTime = "^5.4"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
DateTime = "^5.4"
pandas = "^2.2.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
